<resources>
    <string name="app_name">Kanta</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_library">Library</string>
    <string name="title_search">SEARCH</string>
    <string name="top_of_year"><![CDATA[TOP OF <YEAR>]]></string>
    <string name="top_all_time">TOP ALL TIME</string>
    <string name="recently_played">RECENTLY PLAYED</string>
    <string name="song_list">SONG LIST</string>
    <string name="artist_list">ARTIST LIST</string>
    <string name="album_list">ALBUM LIST</string>
    <string name="bigplayeractivity">BigPlayerActivity</string>
    <string name="toolbar_title">Home</string>

    <string name="search">…</string>
    <string name="current_artist">Artist</string>
    <string name="current_song">song</string>

    <string name="notification_channel">ARCalder.Kanta</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>

    <string-array name="songs">
        <item>Black Panther</item>
        <item>All The Stars</item>
        <item>The Ways</item>
        <item>Opps</item>
        <item>I Am</item>
        <item>Paramedic!</item>
        <item>Bloody Waters</item>
        <item>King's Dead</item>
        <item>Redemption Interlude</item>
        <item>Redemption</item>
        <item>Seasons</item>
        <item>Big Shot</item>
        <item>Pray For Me</item>
    </string-array>

    <string-array name="albums">
        <item>Album1</item>
        <item>Album2</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Not duplicate issue</item>
        <item>I'm just lazy</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
        <item>Album3</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="song_title">song title</string>
    <string name="artist_album">artist name/album</string>
    <string name="todo">TODO</string>
    <string name="artists">Artists</string>
    <string name="play_set">Play Set</string>
    <string name="queue">Queue</string>
    <string name="albums">Albums</string>


</resources>
