<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icons8musicalnotes24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/icons8musicrecord24"
        android:title="@string/albums" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/icons8user24"
        android:title="@string/artists" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icons8playlist24"
        android:title="@string/play_set" />

    <item
        android:id="@+id/navigation_queue"
        android:icon="@drawable/icons8ascendingsorting24"
        android:title="@string/queue"/>


</menu>
